# Flux

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Source/: main.cpp  test.frag  test.vert
Source/Core/Private/: Log.cpp  Status.cpp  Window.cpp
Source/Core/Public/: Log.hpp  RenderingAPI.hpp  Status.hpp  Window.hpp
Source/RHI/Private/: RHI.cpp
Source/RHI/Private/OpenGL/: OpenGL.h  OpenGLCommandBuffer.cpp  OpenGLCommandBuffer.hpp  OpenGLCommandPool.cpp  OpenGLCommandPool.hpp  OpenGLDevice.cpp  OpenGLDevice.hpp  OpenGLDispatch.hpp  OpenGLLoader.cpp  OpenGLLoader.hpp  OpenGLPipeline.cpp  OpenGLPipeline.hpp  OpenGLRHI.cpp  OpenGLRHI.hpp  OpenGLRenderingAgent.cpp  OpenGLRenderingAgent.hpp
Source/RHI/Private/Vulkan/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDispatch.hpp  VulkanHelpers.cpp  VulkanHelpers.hpp  VulkanLoader.cpp  VulkanLoader.hpp  VulkanLog.cpp  VulkanLog.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRHI.cpp  VulkanRHI.hpp  VulkanRenderingAgent.cpp  VulkanRenderingAgent.hpp  VulkanResult.cpp  VulkanResult.hpp
Source/RHI/Public/: RHI.hpp  RHICommandBuffer.hpp  RHICommandPool.hpp  RHIDevice.hpp  RHIPipeline.hpp  RHIRenderingAgent.hpp
include/flux/: file.h  list.h  log.h  rhi.h  status.h
include/internal/rhi/: glUtils.h  opengl.h  vkUtils.h  vulkan.h
src/: file.c  log.c
src/example/: main.c
src/rhi/: rhi.c
src/rhi/opengl/: device.c  rhi.c
src/rhi/opengl/utils/: loader.c  log.c  strings.c
src/rhi/vulkan/: device.c  rhi.c
src/rhi/vulkan/utils/: device.c  instance.c  loader.c  log.c  strings.c  swapchain.c  wrappers.c
